RESOLVED FIXED203742
Error: redefinition of 'TransferFunction'
https://bugs.webkit.org/show_bug.cgi?id=203742
Summary Error: redefinition of 'TransferFunction'
cathiechen
Reported 2019-11-01 09:33:08 PDT
There is a redefinition error of `TransferFunction` if VideoTextureCopierCV.cpp and MediaEngineConfigurationFactoryCocoa.cpp are put in a same UnifiedSource file. Can we rename one of them? /Volumes/Data/worker/iOS-13-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/DerivedSources/WebCore/unified-sources/UnifiedSource253.cpp:5: ./platform/graphics/cv/VideoTextureCopierCV.cpp:54:12: error: redefinition of 'TransferFunction' enum class TransferFunction { ^ In file included from /Volumes/Data/worker/iOS-13-Simulator-Build-EWS/build/WebKitBuild/Release-iphonesimulator/DerivedSources/WebCore/unified-sources/UnifiedSource253.cpp:1: In file included from ./platform/graphics/cocoa/MediaEngineConfigurationFactoryCocoa.cpp:32: In file included from /Volumes/Data/worker/iOS-13-Simulator-Build-EWS/build/Source/WebCore/platform/MediaCapabilitiesDecodingInfo.h:29: In file included from /Vol umes/Data/worker/iOS-13-Simulator-Build-EWS/build/Source/WebCore/platform/mediacapabilities/MediaDecodingConfiguration.h:28: In file included from /Volumes/Data/worker/iOS-13-Simulator-Build-EWS/build/Source/WebCore/platform/mediacapabilities/MediaConfiguration.h:29: In file included from /Volumes/Data/worker/iOS-13-Simulator-Build-EWS/build/Source/WebCore/platform/mediacapabilities/VideoConfiguration.h:30: /Volumes/Data/worker/iOS-13-Simulator-Build-EWS/build/Source/WebCore/platform/mediacapabilities/TransferFunction.h:30:12: note: previous definition is here enum class TransferFunction {
Attachments
Patch (6.28 KB, patch)
2019-11-01 10:00 PDT, cathiechen
no flags
Patch (6.27 KB, patch)
2019-11-03 08:07 PST, cathiechen
no flags
Jer Noble
Comment 1 2019-11-01 09:36:10 PDT
Yes, let’s rename the one in VideoTextureCopierCV.cpp.
cathiechen
Comment 2 2019-11-01 09:45:13 PDT
OK, will do:)
cathiechen
Comment 3 2019-11-01 10:00:07 PDT
cathiechen
Comment 4 2019-11-03 08:07:47 PST
WebKit Commit Bot
Comment 5 2019-11-04 07:38:44 PST
Comment on attachment 382707 [details] Patch Clearing flags on attachment: 382707 Committed r251988: <https://trac.webkit.org/changeset/251988>
WebKit Commit Bot
Comment 6 2019-11-04 07:38:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.