Build error: redefinition of `TransferFunction` https://bugs.webkit.org/show_bug.cgi?id=203742

Reviewed by Jer Noble.

`TransferFunction` defined in both VideoTextureCopierCV.cpp and TransferFunction.h.
Renamed `TransferFunction` in VideoTextureCopierCV.cpp to `TransferFunctionCV`.

* platform/graphics/cv/VideoTextureCopierCV.cpp:
(WebCore::transferFunctionFromString):
(WebCore::YCbCrToRGBMatrixForRangeAndTransferFunction):


Canonical link: https://commits.webkit.org/217154@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251988 268f45cc-cd09-0410-ab3c-d52691b4dbfc